--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" value="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <title>三国志II 覇王の大陸</title>
   <link rel="stylesheet" href="//unpkg.com/bulma@0.8.2/css/bulma.min.css">
   <style>
