--- a/index.html
+++ b/index.html
@@ -4,51 +4,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <title>三国志II 覇王の大陸</title>
-  <link rel="stylesheet" href="//unpkg.com/bulma@0.8.2/css/bulma.min.css">
-  <style>
-    div#canvas {
-      position: fixed;
-      left: 0;
-      right: 0;
-      top: 0;
-      height: 240px;
-    }
-    canvas {
-      display: block;
-      margin: auto;
-    }
-    div#controller-left {
-      position: fixed;
-      left: 0;
-      bottom: 0;
-      text-align: center;
-    }
-    div#controller-right {
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="//unpkg.com/bulma@0.9.1/css/bulma.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="canvas"><canvas></canvas></div>
   <div id="controller-left">
-    <button id="button-up" class="button is-large is-rounded">👆</button>
+    <button class="button is-large is-rounded" data-key="ArrowUp">👆</button>
     <br>
-    <button id="button-left" class="button is-large is-rounded">👈</button>
-    <button id="button-right" class="button is-large is-rounded">👉</button>
+    <button class="button is-large is-rounded" data-key="ArrowLeft">👈</button>
+    <button class="button is-large is-rounded" data-key="ArrowRight">👉</button>
     <br>
-    <button id="button-down" class="button is-large is-rounded">👇</button>
+    <button class="button is-large is-rounded" data-key="ArrowDown">👇</button>
   </div>
   <div id="controller-right">
-    <button id="button-select" class="button is-large is-rounded">Select</button>
-    <button id="button-start" class="button is-large is-rounded">Start</button>
+    <button class="button is-large is-rounded" data-key="s">Save</button>
+    <button class="button is-large is-rounded" data-key="l">Load</button>
     <br>
-    <button id="button-b" class="button is-large is-rounded">B</button>
-    <button id="button-a" class="button is-large is-rounded">A</button>
+    <button class="button is-large is-rounded" data-key="Space">Select</button>
+    <button class="button is-large is-rounded" data-key="Enter">Start</button>
+    <br>
+    <button class="button is-large is-rounded" data-key="x">B</button>
+    <button class="button is-large is-rounded" data-key="z">A</button>
   </div>
-  <script src="//unpkg.com/em-fceux@1.0.2/dist/fceux.js"></script>
+  <script src="//unpkg.com/em-fceux@2.0.1/dist/fceux.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
